--- a/index.html
+++ b/index.html
@@ -83,4 +83,5 @@ canvas.addEventListener('mousemove', function(e) {
 
 </script>
 <script src="game.js"></script>
+<script src="jquery.min.js"></script>
 </html>
