--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>some sort of thingy</title>
 		<style>
 			/* Basic CSS reset stuff */
-			html, body { height: 100%; background: #000; }
+			html, body { height: 100%; background: #000; color: white; }
 			html, body, ul, ol, li, form, fieldset, legend { margin: 0; padding: 0; }
 			div { border-box; -webkit-box-sizing: border-box; }
 			body { font-family: Helvetica, Tahoma; }
@@ -19,6 +19,7 @@
 	</head>
 	<body>
 		<canvas id="canvas" width="320" height="480" style="margin: auto auto"></canvas>
+		<div id="debug">test</div>
 	</body>
 
 <script>
@@ -82,6 +83,6 @@ canvas.addEventListener('mousemove', function(e) {
 })();
 
 </script>
-<script src="game.js"></script>
 <script src="jquery.min.js"></script>
+<script src="game.js"></script>
 </html>
