--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
 		</style>
 	</head>
 	<body>
+		<div id="rate">rate</div>
 		<canvas id="canvas" width="320" height="480" style="margin: auto auto"></canvas>
 		<div id="debug">test</div>
+
 	</body>
 
 <script>
