Add image loader
So far it only creates reflections, not shadows

--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
 	</head>
 	<body>
 		<div id="rate">rate</div>
-		<canvas id="canvas" width="320" height="480" style="margin: auto auto"></canvas>
+		<canvas id="canvas" width="1000" height="1000" style="margin: auto auto"></canvas>
 		<div id="debug">test</div>
-
 	</body>
 
 <script>
@@ -87,4 +86,5 @@ canvas.addEventListener('mousemove', function(e) {
 </script>
 <script src="jquery.min.js"></script>
 <script src="game.js"></script>
+<script src="loadImages.js"></script>
 </html>
